--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-   <string name="app_name">My Application</string>
+   <string name="app_name">Wacoal all-in</string>
 
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -9,7 +9,6 @@
 
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
-
 
    <string name="seller_barchart_best_seller_title">กราฟแสดงรายการเปรียบเทียบยอดขายผลิตภัณฑ์</string>
    <string name="seller_barchart_now">ยอดขายปัจจุบัน</string>
